test: 반복되는 테스트 데이터 생성 fixture이용하도록 개선